fix color contrast issues (perceivable, G17)

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -116,7 +116,7 @@ POSTS & CONTENT STYLES
 
 // Post meta  
 .byline {
-	color: #999;
+	color: #585858;
 	time {}
 }
 
